--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Created using Storyline 360 - http://www.articulate.com  -->
   <!-- version: 3.63.27628.0 -->
-  <title>story1</title>
+  <title>yaron2</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no,minimal-ui"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -118,7 +118,7 @@
   </script>
 
   <div class="mobile-load-title-overlay" style="display: none">
-    <div class="mobile-load-title">story1</div>
+    <div class="mobile-load-title">yaron2</div>
   </div>
 
   <div class="mobile-chrome-warning"></div>
